# midiverse

./: Cargo.toml  LICENSE  README.md  polka.mid
pianoverse-client/: Cargo.toml
pianoverse-client/src/: error.rs  lib.rs
pianoverse-midi/: Cargo.toml
pianoverse-midi/src/: lib.rs
pianoverse-player/: Cargo.toml
pianoverse-player/src/: main.rs
pianoverse-proto/: Cargo.toml  build.rs
pianoverse-proto/src/: lib.rs  pianoverse.proto
