[package]
name = "pianoverse-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
nodi = "1.0.0"
pianoverse-client = { version = "0.1.0", path = "../pianoverse-client" }
pianoverse-proto = { path = "../pianoverse-proto" }
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
