[package]
name = "pianoverse-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = "4.5.3"
inquire = "0.7.4"
pianoverse-client = { version = "0.1.0", path = "../pianoverse-client" }
pianoverse-midi = { version = "0.1.0", path = "../pianoverse-midi" }
pianoverse-proto = { path = "../pianoverse-proto" }
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
